--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
 	<title>Happy Birthday</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
 	<meta name="robots" content="index, follow" />
@@ -57,10 +57,10 @@
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
- 
+
 
 	<div class="container">
-		
+
 		<div class="row">
 			<div class="col-md-2 col-xs-2 bulb-holder">
 				<div class="bulb" id="bulb_yellow"></div>
@@ -103,6 +103,11 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
+				<p>All men's hearts beat.</p>
+				<p>In the journey of life.</p>
+				<p>Men strive to discover what their hearts beat for.</p>
+				<p>When I look at you,</p>
+				<p>I know it beats for you.</p>
 				<p>Today is...</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
@@ -118,27 +123,21 @@
 				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
 				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
+				<p>thanks for the connection we made</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
 				<p>Remember</p>
 				<p>your ambitions</p>
 				<p>you live as a free bird...</p>
 				<p>flying in the blue sky</p>
-				<p>..and travelling daily to Hadapsar :)</p>
-				<p>I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
+				<p>I hope,</p>
+				<p>we enjoy every single moment</p>
+				<p>together</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday</p>
+				<p>I Love you so much</p>
+				<p>Mi Amor</p>
+				<p>Jonathan Bonzali</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
