--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 				  </div>
 				  <div class="cobertura"></div>
 				  <div class="bizcocho"></div>
+				  <div class="anna"></div>
+
 				</div>
 			</div>
 		</div>
